<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/happyImg"
        android:layout_width="89dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:srcCompat="@drawable/happy"
        android:contentDescription="TODO" />


    <Button
        android:id="@+id/sos"
        android:layout_width="143dp"
        android:layout_height="116dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/blue"
        android:text="@string/saveme"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loggedinuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="174dp"
                android:text="@string/hello"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/motivation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/motivation"

                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loggedinuser" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="72dp"
                android:text="@string/feels"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motivation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/angryImg"
        android:layout_width="133dp"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toEndOf="@+id/sadImg"
        app:layout_constraintTop_toBottomOf="@+id/coolImg"
        app:srcCompat="@drawable/angry" />

    <ImageView
        android:id="@+id/sadImg"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happytext"
        app:srcCompat="@drawable/sad" />

    <ImageView
        android:id="@+id/depressedImg"
        android:layout_width="100dp"
        android:layout_height="98dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratefulImg"
        app:srcCompat="@drawable/sick" />

    <ImageView
        android:id="@+id/coolImg"
        android:layout_width="124dp"
        android:layout_height="96dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/gratefulImg"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:srcCompat="@drawable/cool" />

    <ImageView
        android:id="@+id/gratefulImg"
        android:layout_width="104dp"
        android:layout_height="95dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:srcCompat="@drawable/grateful" />

    <TextView
        android:id="@+id/happytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:text="@string/happy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coolImg" />

    <TextView
        android:id="@+id/coolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="74dp"
        android:text="@string/cool"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/happytext"
        app:layout_constraintTop_toBottomOf="@+id/coolImg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="44dp"
        android:text="@string/grateful"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratefulImg" />

    <TextView
        android:id="@+id/sadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:text="@string/sad"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadImg" />

    <TextView
        android:id="@+id/angryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="65dp"
        android:text="@string/angry"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/depressedText"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@+id/sadText"
        app:layout_constraintTop_toBottomOf="@+id/angryImg" />

    <TextView
        android:id="@+id/depressedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="49dp"
        android:text="@string/depressed"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depressedImg" />

    <Button
        android:id="@+id/dialhelp"
        android:layout_width="143dp"
        android:layout_height="116dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/call"

        android:textColor= "@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
